--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
-/frontend/node_modules
-/backend/media
-/backend/db.sqlite3
+/frontend/node_modules/
+/backend/media/
+/backend/db.sqlite3/
+/frontend/src/
