--- a/frontend/package.json
+++ b/frontend/package.json
@@ -5,14 +5,19 @@
   "proxy": "http://localhost:8000",
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^6.4.2",
+    "@fortawesome/free-brands-svg-icons": "^6.4.2",
+    "@fortawesome/free-regular-svg-icons": "^6.4.2",
+    "@fortawesome/free-solid-svg-icons": "^6.4.2",
     "@fortawesome/react-fontawesome": "^0.2.0",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.5.1",
+    "babel-plugin-macros": "^3.1.0",
     "bootstrap": "^4.6.0",
     "bootstrap-icons": "^1.11.2",
     "font-awesome": "^4.7.0",
+    "fortawesome": "^0.0.1-security",
     "joi-browser": "^13.4.0",
     "jwt-decode": "^4.0.0",
     "loadash": "^1.0.0",
