--- a/Pipfile
+++ b/Pipfile
@@ -26,6 +26,8 @@ gunicorn = "*"
 psycopg2-binary = "*"
 dj-database-url = "*"
 django-environ = "*"
+django-silk = "*"
+eventlet = "*"
 
 [dev-packages]
 autopep8 = "*"
