--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -5,10 +5,9 @@ FROM node:20.11.1-alpine3.19
 WORKDIR /app
 COPY package*.json ./
 # RUN npm install --save-dev
-RUN npm ci
+RUN npm install --save-dev @babel/plugin-proposal-private-property-in-object
 COPY . .
 
-ENV CI=true
 ENV PORT=3000
 
 EXPOSE 3000
