--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -20,4 +20,5 @@ COPY . .
 EXPOSE 8000
 
 RUN python manage.py migrate
+RUN python manage.py addsuperuser
 CMD [ "python", "manage.py", "runserver" , "0.0.0.0:8000"]
