--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -21,4 +21,5 @@ EXPOSE 8000
 
 RUN python manage.py migrate
 RUN python manage.py addsuperuser
+RUN python manage.py collectstatic
 CMD [ "python", "manage.py", "runserver" , "0.0.0.0:8000"]
